--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
     "neon-animation": "PolymerElements/neon-animation#^2.0.1",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "web-animations-js": "^2.3.1"
+    "web-animations-js": "^2.3.1",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.4"
   }
 }
